ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing
spec:
  tls:
  - hosts:
      - abc.com
    secretName: tls-app
  ingressClassName: nginx
  rules:
  - host: "abc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mydep
            port:
              number: 80
  - host: "xyz.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mango
            port:
              number: 80
